samples/_failures_safe/1761524298_e74217_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14cce1c8.c: In function ‘main’:
./samples/SAFE/__tmp_14cce1c8.c:164:9: error: expected expression at end of input
  164 |         if (sm.buffer[
      |         ^~
./samples/SAFE/__tmp_14cce1c8.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14cce1c8.c:164:9: error: expected declaration or statement at end of input
